--- a/style.css
+++ b/style.css
@@ -196,6 +196,7 @@ header nav ul li a:hover {
 
 .certificates {
 
+    background: #fff;
     min-height: 90vh;
     width: 100%;
     display: flex;
@@ -343,6 +344,7 @@ section .content .card:hover {
 
 .contact {
 
+    background: #fff;
     min-height: 90vh;
     width: 100%;
     display: flex;
